<resources>
    <!-- Application name-->
    <string name="app_name">RC Controller</string>

    <!-- Empty String -->
    <string name="empty_string"> </string>

    <!-- UI constants -->
    <string name="password">Pin</string>
    <string name="connect">Connect</string>
    <string name="distance_text">Distance: %s</string>
    <string name="speed_text">Speed: %.2fkm/h</string>
    <string name="r_string">R</string>
    <string name="line_label_desc">Line label</string>
    <string name="distance_keeping">Object Avoiding Mode</string>
    <string name="keep_contained">Stop On Black Line Mode</string>
    <string name="change_password">Change name/password</string>
    <string name="exit">Exit Application</string>
    <string name="poweroff">Turn Off System</string>
    <string name="restart">Restart System</string>
    <string name="hot_road">Hot Road</string>
    <string name="retry">Try Again</string>
    <string name="name">Name</string>
    <string name="old_password">Old Pin</string>
    <string name="new_password">New Pin</string>
    <string name="new_password_again">New Pin Again</string>
    <string name="empty_note">If you leave either the name, or the new password empty, they will remain the same.</string>
    <string name="send">Send</string>
    <string name="password_empty">The old password field must not be empty!</string>
    <string name="password_not_match">The Pins you provided did not match!</string>
    <string name="password_incorrect">The pin you provided was incorrect!</string>
    <string name="password_success">The requested values were set successfully! You need to restart the car, in order for the changes to be applied.</string>

    <!-- Permission/Connectivity Descriptions/Errors-->
    <string name="ACCESS_WIFI_STATE"> ❗ The WIFI state permission is needed to detect the RC car on your network, so the app can autoconnect to it.\n</string>
    <string name="BLUETOOTH"> ❗ The BLUETOOTH permission is needed, so the app can handle the bluetooth of your phone (turn it on/off).\n</string>
    <string name="ACCESS_FINE_LOCATION"> ❗ The LOCATION permission is needed for both the WIFI, and the BLUETOOTH functionality of the app, hence it is needed in order to continue.\n</string>
    <string name="ACCESS_NETWORK_STATE"> ❗ The NETWORK state permission is needed to detect the RC car on your network, so the app can autoconnect to it.\n</string>
    <string name="BLUETOOTH_ADMIN"> ❗ The BLUETOOTH ADMIN permission is needed in order to scan the area for nearby devices, like the RC car, so the app can autoconnect to it.\n</string>
    <string name="INTERNET"> ❗ The INTERNET permission is needed to detect the RC car on your network, so the app can autoconnect to it.\n</string>
    <string name="ACCESS_BACKGROUND_LOCATION"> ❗ The BACKGROUND LOCATION permission is needed, in order for the app to use bluetooth features, so the app can handle the bluetooth of your phone (turn it on/off).\n</string>
    <string name="TURN_WIFI_ON"> ⓘ If you connect to the wifi, you give us a higher chance to autodetect devices on your network.</string>
    <string name="TURN_BLUETOOTH_ON"> ⓘ If you enable the app to turn on your bluetooth, you give us a higher chance to autodetect bluetooth devices near you.</string>
    <string name="BOTH_DEVICES_OFF"> ❗ Could not make a search, since both bluetooth, and wifi is turned off.\n</string>
    <string name="UNSUCCESSFUL_SEARCH"> ⚠ Search for devices was unsuccessful on</string>
    <string name="CAESAR_UNREACHABLE"> ❗ The Caesar server was unreachable, so we could not search for devices on your network!\n</string>
    <string name="PERMISSION_ERROR">Ooops. Looks like you did not accept our access to some permission that necessary to the applications usage. We could not continue without those permissions.</string>
    <string name="NO_DEVICES_ERROR">Ooops. Sorry, it looks like we could not find any active cars near you! If you are sure the car is active, try moving closer, or restart the device.</string>

    <!-- Development Constants-->
    <string name="error">ERROR</string>
    <string name="error_message">ERROR MESSAGE</string>
    <string name="update_found">Your car uses version %s, however version %s is available to download. Do you want to update now?</string>
</resources>
